# fast-json-stringify

./: CHANGELOG.md  Cargo.toml  README.md
src/: engine.rs  error.rs  lib.rs  merge.rs  meta.rs  native.rs  number.rs  refresolver.rs  serializer.rs  validate_value.rs  value.rs
tests/: additional_properties.rs  allof.rs  any.rs  anyof.rs  array.rs  asnumber.rs  basic.rs  bigint.rs  clean_cache.rs  coercion.rs  const_value.rs  date.rs  debug_mode.rs  defaults.rs  enum_value.rs  fix_604.rs  if_then_else.rs  infer_type.rs  infinity.rs  integer.rs  invalid_schema.rs  issue_479.rs  issue_793.rs  issue_794.rs  issue_836.rs  json_add_comma.rs  jsts.rs  missing_values.rs  multi_type_serializer.rs  nested_objects.rs  nullable.rs  oneof.rs  pattern_properties.rs  recursion.rs  ref_.rs  regex.rs  required.rs  requires_validator.rs  sanitize.rs  serializer_edges.rs  (+7 more)
tests/common/: mod.rs
